configures clustering